# tss

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
tests/: __init__.py  test_thomas_algorithm.py
tss/: __init__.py  bvp_solver.py  derivative_comparison.py  euler_system.py  grid_function_gen.py  spring_mass_damper.py  thomas_algorithm.py
